--- a/res/layout/fragment_resumen.xml
+++ b/res/layout/fragment_resumen.xml
@@ -10,16 +10,97 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
+        <!-- Creamos el Spinner -->
+
         <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/elegir_Vehiculo_Spinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" />
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/spinner1"
-            android:orientation="vertical" >
+            android:layout_below="@+id/elegir_Vehiculo_Spinner"
+            android:orientation="vertical"
+            android:padding="10dp" >
+
+            <!-- TableLayout Resumen Total -->
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:stretchColumns="*" >
+
+                <TableRow
+                    android:id="@+id/tablerow1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.35"
+                        android:text="@string/consumoMedio_Label"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="@color/Negro" />
+
+                    <TextView
+                        android:id="@+id/lblCanual"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/stringVacio"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                </TableRow>
+                <!-- FIN TableLayout Resumen Total -->
+
+                <TableRow
+                    android:id="@+id/tableRow2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.35"
+                        android:text="@string/kmTotales_Label"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <TextView
+                        android:id="@+id/lblKmTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/stringVacio"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.35"
+                        android:text="@string/gastoTotal_Label"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <TextView
+                        android:id="@+id/lblGTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/stringVacio"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                </TableRow>
+            </TableLayout>
 
             <TextView
                 android:id="@+id/textView1"
@@ -50,19 +131,21 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </LinearLayout>
 
+        <!-- BOTONES PARA AÑADIR DATOS -->
+
         <Button
             android:id="@+id/button1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/button2"
-            android:text="Button" />
+            android:text="@string/addVehicule_Boton" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="Button" />
+            android:text="@string/addData_Boton" />
     </RelativeLayout>
 
 </ScrollView>
