--- a/res/layout/fragment_resumen.xml
+++ b/res/layout/fragment_resumen.xml
@@ -22,15 +22,18 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/elegir_Vehiculo_Spinner"
-            android:orientation="vertical"
-            android:padding="10dp" >
+            android:orientation="vertical" >
+
+            <View style="@style/Divider" />
 
             <!-- TableLayout Resumen Total -->
 
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:padding="10dp"
                 android:stretchColumns="*" >
 
                 <TableRow
@@ -53,9 +56,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/stringVacio"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        style="@style/Resultado" />
                 </TableRow>
-                <!-- FIN TableLayout Resumen Total -->
 
                 <TableRow
                     android:id="@+id/tableRow2"
@@ -76,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/stringVacio"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        style="@style/Resultado" />
                 </TableRow>
 
                 <TableRow
@@ -98,40 +100,131 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/stringVacio"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        style="@style/Resultado" />
                 </TableRow>
             </TableLayout>
+            <!-- FIN TableLayout Resumen Total -->
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+            <View style="@style/Divider" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+            <!-- INICIO TABLE MAS EFICIENTES -->
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
+            <TableLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:padding="10dp"
+                android:stretchColumns="*" >
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
+                <TableRow
+                    android:id="@+id/tableRow6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/eficiencia_Label"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="18sp" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/gasolina_Label"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/min_label"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textSize="15sp"
+                        android:typeface="monospace" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/stringVacio"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        style="@style/Resultado"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/max_label" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+                </TableRow>
+            </TableLayout>
+            <!-- FIN TABLE MAS EFICIENTES -->
+
+            <View style="@style/Divider" />
+
+            <!-- INICIO Eficiencias -->
+
+            <TableLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:padding="10dp"
+                android:stretchColumns="*" >
+
+                <TableRow
+                    android:id="@+id/tableRow4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ultimos_Label"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="18sp" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        style="@style/Resultado"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="EJEMPLO" />
+                </TableRow>
+            </TableLayout>
         </LinearLayout>
 
         <!-- BOTONES PARA AÑADIR DATOS -->
+
+        <View style="@style/Divider" 
+            android:layout_above="@+id/button1"/>
 
         <Button
             android:id="@+id/button1"
