--- a/res/layout/fragment_resumen.xml
+++ b/res/layout/fragment_resumen.xml
@@ -3,7 +3,6 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fa6a6a"
     android:fillViewport="true" >
 
     <RelativeLayout
@@ -19,6 +18,7 @@
             android:layout_alignParentTop="true" />
 
         <LinearLayout
+            android:id="@+id/body_Layout"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/elegir_Vehiculo_Spinner"
@@ -29,12 +29,15 @@
             <!-- TableLayout Resumen Total -->
 
             <TableLayout
+                android:id="@+id/table_Consumo_Total"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:padding="10dp"
                 android:stretchColumns="*" >
+
+                <!-- Consumo Medio -->
 
                 <TableRow
                     android:id="@+id/tablerow1"
@@ -51,13 +54,17 @@
                         android:textColor="@color/Negro" />
 
                     <TextView
-                        android:id="@+id/lblCanual"
+                        android:id="@+id/consumo_Anual_Label"
+                        style="@style/Resultado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/stringVacio"
-                        style="@style/Resultado" />
+                        android:text="@string/stringVacio" />
                 </TableRow>
+                <!-- Fin Consumo Medio -->
+
+
+                <!-- Km Recorridos -->
 
                 <TableRow
                     android:id="@+id/tableRow2"
@@ -73,13 +80,17 @@
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
                     <TextView
-                        android:id="@+id/lblKmTotal"
+                        android:id="@+id/km_Recorridos_Label"
+                        style="@style/Resultado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/stringVacio"
-                        style="@style/Resultado" />
+                        android:text="@string/stringVacio" />
                 </TableRow>
+                <!-- Fin Km Recorridos -->
+
+
+                <!-- Gastos Totales -->
 
                 <TableRow
                     android:id="@+id/tableRow3"
@@ -95,13 +106,15 @@
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
                     <TextView
-                        android:id="@+id/lblGTotal"
+                        android:id="@+id/gasto_Total_Label"
+                        style="@style/Resultado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/stringVacio"
-                        style="@style/Resultado" />
+                        android:text="@string/stringVacio" />
                 </TableRow>
+                <!-- Fin Gastos Totales -->
+
             </TableLayout>
             <!-- FIN TableLayout Resumen Total -->
 
@@ -110,6 +123,7 @@
             <!-- INICIO TABLE MAS EFICIENTES -->
 
             <TableLayout
+                android:id="@+id/table_Eficiencia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
@@ -144,7 +158,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/eficiencia_Min_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/min_label"
@@ -166,7 +180,7 @@
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
                     <TextView
-                        android:id="@+id/textView10"
+                        android:id="@+id/eficiencia_Max_Label"
                         style="@style/Resultado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -183,9 +197,10 @@
 
             <View style="@style/Divider" />
 
-            <!-- INICIO Eficiencias -->
+            <!-- INICIO Ultimos_repostajes -->
 
             <TableLayout
+                android:id="@+id/Table_Repostaje"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
@@ -211,7 +226,7 @@
                     android:layout_height="wrap_content" >
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/ultimosRepostajes_Label"
                         style="@style/Resultado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -219,22 +234,25 @@
                         android:text="EJEMPLO" />
                 </TableRow>
             </TableLayout>
+            <!-- FIN Ultimos_repostajes -->
+            
         </LinearLayout>
 
         <!-- BOTONES PARA AÑADIR DATOS -->
 
-        <View style="@style/Divider" 
-            android:layout_above="@+id/button1"/>
+        <View
+            style="@style/Divider"
+            android:layout_above="@+id/add_Data_Button" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/add_Data_Button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/button2"
+            android:layout_above="@+id/add_vehicule_button"
             android:text="@string/addVehicule_Boton" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/add_vehicule_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
